--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-*.env
+.env
+db.sqlite3 
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
 
+# DS_Store and Pycache is not relevant
+.DS_Store
 __pycache__/
 *.py[cod]
