--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,3 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: soccerbet/wsgi.py
+    WSGIPath: soccerbet.wsgi:application
