--- a/.ebextensions/01_collectstatic.config
+++ b/.ebextensions/01_collectstatic.config
@@ -1,4 +1,4 @@
 container_commands:
   01_collectstatic:
-    command: ". /opt/elasticbeanstalk/containerfiles/activate && python manage.py collectstatic --noinput"
+    command: "python manage.py collectstatic --noinput"
     leader_only: true
