Add factory for data fuzzing and add more unit-testing

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ django-timezone-field==7.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 fabric==3.2.2
+factory_boy==3.3.3
+Faker==38.0.0
 gunicorn==23.0.0
 h11==0.14.0
 idna==3.8
@@ -41,6 +43,7 @@ packaging==24.2
 paramiko==4.0.0
 pathspec==0.12.1
 prompt_toolkit==3.0.48
+psycopg==3.2.3
 psycopg2-binary==2.9.11
 pycparser==2.23
 PyJWT==2.10.1
